Added repository and singleton pattern

--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/Index.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     
 
 
-@foreach (var u in @Model)
+@foreach (var el in Model)
 {
-    <p>@u.Name @u.Surname</p>
+    <p>@el.Name @el.Surname</p><br/>
 }
