--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/Index.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/Index.cshtml
@@ -1,9 +1,101 @@
-﻿@using LibraryApp.Entities
-@model List<User>
-    
+﻿
+<!-- /.row -->
+<div class="row">
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Anasayfa</h1>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-book fa-5x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div class="huge">26</div>
+                        <div>Kategoriler</div>
+                    </div>
+                </div>
+            </div>
+            <a href="~/Home/CategoryList">
+                <div class="panel-footer">
+                    <span class="pull-left">Detaylar</span>
+                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
 
+                    <div class="clearfix"></div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-green">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-book fa-5x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div class="huge">12</div>
+                        <div>Kitaplar</div>
+                    </div>
+                </div>
+            </div>
+            <a href="~/Home/BookList">
+                <div class="panel-footer">
+                    <span class="pull-left">Detaylar</span>
+                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
 
-@foreach (var el in Model)
-{
-    <p>@el.Name @el.Surname</p><br/>
-}
+                    <div class="clearfix"></div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-yellow">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-shopping-cart fa-5x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div class="huge">124</div>
+                        <div>New Orders!</div>
+                    </div>
+                </div>
+            </div>
+            <a href="#">
+                <div class="panel-footer">
+                    <span class="pull-left">Detaylar</span>
+                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+
+                    <div class="clearfix"></div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-red">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-support fa-5x"></i>
+                    </div>
+                    <div class="col-xs-9 text-right">
+                        <div class="huge">13</div>
+                        <div>Support Tickets!</div>
+                    </div>
+                </div>
+            </div>
+            <a href="#">
+                <div class="panel-footer">
+                    <span class="pull-left">Detaylar</span>
+                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+
+                    <div class="clearfix"></div>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
