--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
@@ -41,6 +41,8 @@
     <script src="~/Scripts/metisMenu.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="~/Scripts/startmin.js"></script>
+    <!-- My Custom Css File -->
+    <link href="~/Scripts/Site.css" rel="stylesheet" />
 </head>
 <body>
     <div id="wrapper">
@@ -141,12 +143,12 @@
         <!-- Page Content -->
         <div id="page-wrapper">
             <div class="container-fluid">
-                
+
                 <!-- ... Your content goes here ... -->@RenderBody()
             </div>
         </div>
     </div>
-    
+
 
 </body>
 </html>
