--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/RegisterUser.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/RegisterUser.cshtml
@@ -12,44 +12,44 @@
                 @using (Html.BeginForm())
                 {
 
-                    <fieldset>
+                <fieldset>
 
-                        <div class="form-group">
+                    <div class="form-group">
 
-                            @Html.TextBoxFor(model => model.Username, new {@class = "form-control", placeholder = "Username", name = "Username", type = "text"})
-                        </div>
-                        <div class="form-group">
+                        @Html.TextBoxFor(model => model.Username, new { @class = "form-control", placeholder = "Username", name = "Username", type = "text" })
+                    </div>
+                    <div class="form-group">
 
-                            @Html.TextBoxFor(model => model.Password, new {@class = "form-control", placeholder = "Password", name = "Password", type = "password"})
+                        @Html.TextBoxFor(model => model.Password, new { @class = "form-control", placeholder = "Password", name = "Password", type = "password" })
 
-                        </div>
-                        <div class="form-group">
+                    </div>
+                    <div class="form-group">
 
-                            @Html.TextBoxFor(model => model.Name, new {@class = "form-control", placeholder = "Name", name = "Name", type = "text"})
+                        @Html.TextBoxFor(model => model.Name, new { @class = "form-control", placeholder = "Name", name = "Password", type = "password" })
 
-                        </div>
-                        <div class="form-group">
+                    </div>
 
-                            @Html.TextBoxFor(model => model.Surname, new {@class = "form-control", placeholder = "Surname", name = "Surname", type = "text"})
-                        </div>
+                    <div class="form-group">
 
-                        <div class="form-group">
+                        @Html.TextBoxFor(model => model.Surname, new { @class = "form-control", placeholder = "Surname", name = "Surname", type = "text" })
+                    </div>
 
-                            @Html.TextBoxFor(model => model.Email, new {@class = "form-control", placeholder = "E-mail", name = "Email", type = "email"})
-                        </div>
-                        <!-- Change this to a button or input when using this as a form -->
-                        <div class="form-group">
-                            <button type="submit" href="#" class="btn btn-lg btn-success btn-block">Kayıt Ol</button>
-                        </div>
-                    </fieldset>
-                        
+                    <div class="form-group">
+
+                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control", placeholder = "E-mail", name = "Email", type = "email" })
+                    </div>
+                    <!-- Change this to a button or input when using this as a form -->
+                    <div class="form-group">
+                        <button type="submit" href="#" class="btn btn-lg btn-success btn-block">Kayıt Ol</button>
+                    </div>
+                </fieldset>
+
                 }
-                
+
             </div>
         </div>
     </div>
 </div>
-
 
 
 
