--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using LibraryApp.Entities
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -7,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Library App</title>
+    <title>Startmin - Bootstrap Admin Theme</title>
     <!-- Bootstrap Core CSS -->
 
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
@@ -51,7 +50,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
-                <a class="navbar-brand danger" href="#">Library</a>
+                <a class="navbar-brand" href="#">Startmin</a>
             </div>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -60,48 +59,50 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- Top Navigation: Left Menu -->
-            @*<ul class="nav navbar-nav navbar-left navbar-top-links">
-                <li><a href="~/Home/Index"><i class="fa fa-home fa-fw"></i> Main Page</a></li>
-            </ul>*@
+            <ul class="nav navbar-nav navbar-left navbar-top-links">
+                <li><a href="#"><i class="fa fa-home fa-fw"></i> Website</a></li>
+            </ul>
             <!-- Top Navigation: Right Menu -->
             <ul class="nav navbar-right navbar-top-links">
-
-                @if (Session["login"] == null)
-                {
-                    <li><a href="~/Home/LoginUser"><i class="fa fa-low-vision fa-fw text-success"></i> Login</a></li>
-                    <li><a href="~/Home/RegisterUser"><i class="fa fa-question fa-fw"></i> Register</a></li>
-                    
-                }
-                else
-                {
-                    var currentUser = @Session["login"] as User;
-
-                    <li class="dropdown">
-
-
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="fa fa-user fa-fw"></i> @currentUser.Email <b class="caret"></b>
-                        </a>
-
-
-                        <ul class="dropdown-menu dropdown-user">
-                            <li>
-                                <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                
-                            <a href="~/Home/LogOut"><i class="fa fa-sign-out fa-fw"></i> LogOut</a>
-                            </li>
-                        </ul>
-                    </li>
-                    
-                }
-
-                
+                <li class="dropdown navbar-inverse">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-bell fa-fw"></i> <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu dropdown-alerts">
+                        <li>
+                            <a href="#">
+                                <div>
+                                    <i class="fa fa-comment fa-fw"></i> New Comment
+                                    <span class="pull-right text-muted small">4 minutes ago</span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a class="text-center" href="#">
+                                <strong>See All Alerts</strong>
+                                <i class="fa fa-angle-right"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-user fa-fw"></i> secondtruth <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li>
+                            <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
             <!-- Sidebar -->
             <div class="navbar-default sidebar" role="navigation">
