--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/LoginUser.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/LoginUser.cshtml
@@ -23,7 +23,7 @@
                         </div>
                         <!-- Change this to a button or input when using this as a form -->
                         <div class="form-group">
-                            <button type="submit" href="#" class="btn btn-lg btn-success btn-block">Kayıt Ol</button>
+                            <button type="submit" href="#" class="btn btn-lg btn-success btn-block">Giriş Yap</button>
                         </div>
                     </fieldset>
 
