--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
 
                         <ul class="dropdown-menu dropdown-user">
                             <li>
-                                <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                                <a href="~/User/ShowProfile/@currentUser.Id"><i class="fa fa-user fa-fw"></i> User Profile</a>
                             </li>
                             <li>
                                 <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
