--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/CategoryList.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/CategoryList.cshtml
@@ -8,13 +8,12 @@
     </div>
 </div>
 
-
 <div class="row">
     <div class="col-lg-12">
         <div class="panel panel-default">
             @* <div class="panel-heading">
-                DataTables Advanced Tables
-            </div>*@
+                    DataTables Advanced Tables
+                </div>*@
             <!-- /.panel-heading -->
             <div class="panel-body col-md-6">
                 <div class="table-responsive">
@@ -23,8 +22,6 @@
                             <tr>
                                 <th>Kategori Id</th>
                                 <th>Kategori İsim</th>
-                                
-                                
                             </tr>
                         </thead>
                         <tbody>
@@ -33,21 +30,20 @@
                                 <tr class="odd gradeA">
                                     <td>@el.Id</td>
                                     <td>@el.Name</td>
-                                    <td><a type="submit" href="~/Home/Book/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
-                                        </td>
+                                    <td>
+                                        <a type="submit" href="~/Home/Book/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
+                                    </td>
                                 </tr>
                             }
-
-
                         </tbody>
                     </table>
                 </div>
                 <!-- /.table-responsive -->
                 @*<div class="well">
-                    <h4>DataTables Usage Information</h4>
-                    <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
-                    <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
-                </div>*@
+                        <h4>DataTables Usage Information</h4>
+                        <p>DataTables is a very flexible, advanced tables plugin for jQuery. In SB Admin, we are using a specialized version of DataTables built for Bootstrap 3. We have also customized the table headings to use Font Awesome icons in place of images. For complete documentation on DataTables, visit their website at <a target="_blank" href="https://datatables.net/">https://datatables.net/</a>.</p>
+                        <a class="btn btn-default btn-lg btn-block" target="_blank" href="https://datatables.net/">View DataTables Documentation</a>
+                    </div>*@
             </div>
             <!-- /.panel-body -->
         </div>
