--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
 
     <!-- My Custom Css File -->
-    <link href="~/Scripts/Site.css" rel="stylesheet" />
+    <link href="~/Content/Site.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
