--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/User/EditProfile.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/User/EditProfile.cshtml
@@ -1,7 +1,83 @@
-﻿
+﻿@model LibraryApp.Entities.User
+
 @{
     ViewBag.Title = "EditProfile";
 }
 
 <h2>EditProfile</h2>
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>User</h4>
+        <hr />
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Surname, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.Surname, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-8">
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ProfileImageFileName, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-8">
+                @{
+                    if (Model.ProfileImageFileName != null)
+                    {
+                        <img src="~/Images/@Model.ProfileImageFileName" class="img-thumbnail" width="128" height="128" />
+                    }
+                    else
+                    {
+                        <img src="~/Images/no-image-found.png" class="img-thumbnail" width="128" height="128" />
+                    }
+                }
+                @*<input type="file" name="ProfileImage" id="ProfileImage" class="form-control" /><br />
+                    <span><i>Lütfen jpg, jpeg ya da png formatı kullanın.</i></span>*@
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-8">
+                <input type="submit" value="Edit" class="btn btn-primary" style="width:5.88em" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-8">
+                @Html.ActionLink("Geri Dön","ShowProfile",null,new{ @class="btn btn-info"})
+            </div>
+        </div>
+    </div>
+}
 
