--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/CategoryList.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/CategoryList.cshtml
@@ -31,7 +31,7 @@
                                     <td>@el.Id</td>
                                     <td>@el.Name</td>
                                     <td>
-                                        <a type="submit" href="~/Home/Book/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
+                                        <a type="submit" href="~/Home/BookByCategory/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
                                     </td>
                                 </tr>
                             }
