--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
-                <a class="navbar-brand danger" href="#">Library</a>
+                <a class="navbar-brand danger" href="~/Home/Index">MyLibrary</a>
             </div>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
