--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/User/ShowProfile.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/User/ShowProfile.cshtml
@@ -33,7 +33,7 @@
             <span><i>Lütfen jpg, jpeg ya da png formatı kullanın.</i></span>*@
         </div>
 
-        <div class="col-md-5">
+        <div class="col-md-6">
 
             <h3>@Model.Name @Model.Surname</h3>
 
@@ -45,7 +45,9 @@
 
             @if (Model.Borrows.Count > 0)
             {
-                <h5><b>Kiralanan Kitaplar</b></h5>
+                @*@TempData["message"]*@
+                <h3><b>Kiralanan Kitaplar</b></h3>
+                <hr/>
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
@@ -54,7 +56,7 @@
                                 <th>Kitap Yazar</th>
                                 <th>Ödünç Başlangıç</th>
                                 <th>Ödünç Son</th>
-                                <th>Geri Getirildi mi?</th>
+                                <th>Teslim edildi mi?</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -63,24 +65,28 @@
 
                                 var color = el.IsLent ? "success" : "danger";
 
-                                <tr class="odd gradeA ">
-                                    <td>@el.Book.Name</td>
-                                    <td>@el.Book.Author</td>
-                                    <td>@el.BorrowedTime.Date.ToLongDateString()</td>
-                                    <td>@el.LentTime.Date.ToLongDateString()</td>
-                                    @if (el.IsLent)
-                                    {
-                                        <td class="@color">Evet</td>
-                                    }
-                                    else
-                                    {
-                                        <td class="@color">Hayır</td>
-                                    }
+                            <tr class="odd gradeA ">
+                                <td>@el.Book.Name</td>
+                                <td>@el.Book.Author</td>
+                                <td>@el.BorrowedTime.Date.ToLongDateString()</td>
+                                <td>@el.LentTime.Date.ToLongDateString()</td>
+                                @if (el.IsLent)
+                                {
+                                    <td class="@color">Evet</td>
+                                }
+                                else
+                                {
+                                    <td class="@color">Hayır</td>
+                                }
 
-                                    <td>
-                                        <a type="submit" href="~/Home/Book/@el.Book.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
-                                    </td>
-                                </tr>
+                                @*<td>
+            <a type="submit" href="~/Home/Book/@el.Book.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
+        </td>*@
+                                @if (!el.IsLent)
+                                {
+                                    <td><a href="~/Book/LentBookById/@el.Id" class="btn btn-success" onclick="return confirm('Are you sure ?');">Teslim Et</a></td>
+                                }
+                            </tr>
                             }
                         </tbody>
                     </table>
@@ -88,18 +94,18 @@
             }
             else
             {
-                <p><b>Henüz Kitap Kiralamadınız..</b></p>
+                <h3><b>Henüz Kitap Kiralamadınız..</b></h3>
             }
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="dropdown">
                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
-                    Settings
+                    Ayarlar
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="~/User/EditProfile/@Model.Id">Edit User</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="~/User/RemoveProfile/@Model.Id" onclick="return confirm('Are you sure ?');">Delete User</a></li>
+                    <li role="presentation"><a class="btn-custom" role="menuitem" tabindex="-1" href="~/User/EditProfile/@Model.Id">Kullanıcı güncelle</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="~/User/RemoveProfile/@Model.Id" onclick="return confirm('Are you sure ?');">Kullanıcı sil</a></li>
                 </ul>
             </div>
         </div>
