--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/User/EditProfile.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/User/EditProfile.cshtml
@@ -18,7 +18,7 @@
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-8">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                
             </div>
         </div>
 
@@ -70,7 +70,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-8">
-                <input type="submit" value="Edit" class="btn btn-primary" style="width:5.88em" />
+                <input type="submit" value="Edit" class="btn btn-primary" style="width:5.88em" onclick="confirm('Kullanıcıyı güncellemek istediğinize emin misiniz?')"/>
             </div>
         </div>
         <div class="form-group">
