--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/User/ShowProfile.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/User/ShowProfile.cshtml
@@ -18,12 +18,12 @@
             @{
                 if (Model.ProfileImageFileName != null)
                 {
-                    <img src="~/Images/@Model.ProfileImageFileName" class="img-thumbnail" width="128" height="128" />
+                    <img src="~/Images/@Model.ProfileImageFileName" class="img-thumbnail" id="img-custom" width="820px" height="312px"  />
 
                 }
                 else
                 {
-                    <img src="~/Images/no-image-found.png" class="img-thumbnail" width="128" height="128" />
+                    <img src="~/Images/no-image-found.png" class="img-thumbnail" id="img-custom" width="820px" height="312px"  />
 
                 }
 
