--- a/LibraryApp.Solution/LibraryApp.WebApp/Content/Site.css
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Content/Site.css
@@ -14,6 +14,11 @@
         
     }
 
+#img-custom {
+    border-radius: 50%;
+}
+
+
 /*.validation-summary-errors{
     background-color:#D9FFB2;
     border: 1px solid #5CBA30;
