--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/Index.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/Index.cshtml
@@ -59,12 +59,12 @@
                         <i class="fa fa-shopping-cart fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
-                        <div class="huge">124</div>
-                        <div>New Orders!</div>
+                        <div class="huge">33</div>
+                        <div>Müsait Kitaplar</div>
                     </div>
                 </div>
             </div>
-            <a href="#">
+            <a href="~/Home/BookListAvailable">
                 <div class="panel-footer">
                     <span class="pull-left">Detaylar</span>
                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
