--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Category/AddCategory.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Category/AddCategory.cshtml
@@ -1,15 +1,15 @@
 ﻿@model LibraryApp.Entities.Category
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "AddCategory";
 }
 
-<h2>Create</h2>
+<h2>AddCategory</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-
+    
     <div class="form-horizontal">
         <h4>Category</h4>
         <hr />
@@ -18,18 +18,18 @@
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Ekle" class="btn btn-success" />
-                )
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Geri", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
