--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/BookList.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/BookList.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<LibraryApp.Entities.Book>
+﻿@using LibraryApp.Entities
+@model IEnumerable<LibraryApp.Entities.Book>
 
 <div class="row">
     <div class="col-lg-12">
@@ -13,7 +14,7 @@
                     DataTables Advanced Tables
                 </div>*@
             <!-- /.panel-heading -->
-            <div class="panel-body col-md-9">
+            <div class="panel-body col-md-12">
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
@@ -21,11 +22,11 @@
                                 <th>Kitap Id</th>
                                 <th>Kitap İsim</th>
                                 <th>Kitap Yazar</th>
-                                <th>Kitap Özet</th>
                                 <th>Kitap Yayın Tarihi</th>
                                 <th>Kitap Sayfa Sayısı</th>
                                 <th>Kitap Dili</th>
                                 @*<th>Kirala</th>*@
+
                             </tr>
                         </thead>
                         <tbody>
@@ -35,9 +36,10 @@
                                 <td>@el.Id</td>
                                 <td>@el.Name</td>
                                 <td>@el.Author</td>
-
-                                <!--  özetin lengthi 40dan büyükse ve sonu " "  ile bitmiyorsa
-         40-60 arası ilk " "'in indexini al ve, o boşluğa kadar yaz   ,    -->
+                                
+                                <!-- todo özet tabledan çıkarıldı -->
+                                @*özetin lengthi 40dan büyükse ve sonu " "  ile bitmiyorsa
+         40-60 arası ilk " "'in indexini al ve, o boşluğa kadar yaz   ,    
                                 @if (el.Summary.Length > 40 && el.Summary.Substring(0, 40).EndsWith(" "))
                                 {
                                     <td>@el.Summary.Substring(0, 40)..</td>
@@ -48,7 +50,11 @@
                                         .IndexOf(" ", StringComparison.Ordinal);
                                     <td>@el.Summary.Substring(0, indexOfFirstBlank + 40)..</td>
                                 }
-                                <td>@el.PublishedDate</td>
+                                else
+                                {
+                                    <td>@el.Summary</td>
+                                }*@
+                                <td>@el.PublishedDate.ToShortDateString()</td>
                                 <td>@el.PageCount</td>
                                 <td>@el.Language</td>
                                 @{
@@ -70,6 +76,13 @@
                                 @*<td>
             <button href="~/Home/Book/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></button>
         </td>*@
+                            @{
+                                if (Session["login"] is User currentUser && currentUser.IsAdmin)
+                                {
+                                    <td><a class="btn btn-danger" type="submit" href="~/Book/DeleteBook/@el.Id" value="Sil">Sil
+                                        <span class="glyphicon glyphicon-remove-sign"></span></a></td>
+                                }
+                            }
                             </tr>
                             }
                         </tbody>
