--- a/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/CategoryList.cshtml
+++ b/LibraryApp.Solution/LibraryApp.WebApp/Views/Home/CategoryList.cshtml
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Kategoriler</h1>
+        <h1 class="page-header text-center">Kategoriler </h1>
     </div>
 </div>
 
@@ -15,26 +15,40 @@
                     DataTables Advanced Tables
                 </div>*@
             <!-- /.panel-heading -->
-            <div class="panel-body col-md-6">
+            <div class="panel-body col-md-6 col-md-offset-3">
+                
+                <div class="input-group">
+   
+
+                    @Html.TextBox("Ekle",null,new {@class= "form-control" ,type="text" })
+                    <span class="input-group-btn">
+                        <a class="btn btn-info" type="button" href="">Kitap Ekle</a>
+                    </span>
+                </div>
+                
+                <hr />
+
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover" id="dataTables-example">
                         <thead>
-                            <tr>
-                                <th>Kategori Id</th>
-                                <th>Kategori İsim</th>
-                            </tr>
+                        <tr>
+                            <th>Kategori Id</th>
+                            <th>Kategori İsim</th>
+                            <th>Kitaplar</th>
+                        </tr>
                         </thead>
                         <tbody>
-                            @foreach (var el in Model)
-                            {
-                                <tr class="odd gradeA">
-                                    <td>@el.Id</td>
-                                    <td>@el.Name</td>
-                                    <td>
-                                        <a type="submit" href="~/Home/BookByCategory/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
-                                    </td>
-                                </tr>
-                            }
+                        @foreach (var el in Model)
+                        {
+                            <tr class="odd gradeA">
+                                <td>@el.Id</td>
+                                <td>@el.Name</td>
+                                <td>
+                                    <a type="submit" href="~/Home/BookByCategory/@el.Id" class="btn btn-success"><span class="fa fa-address-book-o"></span></a>
+                                </td>
+                                <td><a href="~/Category/DeleteCategory/@el.Id" class="btn btn-danger" onclick="confirm('Silmek istediğinize emin misiniz ? ')">Sil</a></td>
+                            </tr>
+                        }
                         </tbody>
                     </table>
                 </div>
